Fix spacing issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ div#spaced{
   margin-top: 20px;
 }
 
-div#doublespaced{
+div.doublespaced{
   margin-bottom: 40px;
   margin-top: 40px;
 }
